coming soon text on portfolio

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -103,6 +103,10 @@
     <app-page id="portfolio" class="page d-flex" #portfolio>
         <div class="container text-center">
             <h1 class="page-title mb-4"><span class="text-light bg-secondary">portfolio</span></h1>
+
+            <div class="d-flex align-items-center h-100 text-center">
+                <p class="lead flex-grow-1">coming soon!</p>
+            </div>
         </div>
     </app-page>
 
