social icon links added

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,12 +12,10 @@
     </nav>
 
     <span class="social-icons ml-auto text-right">
-      <a href=""><i class="socicon-stackexchange" target="_blank"></i></a>
-      <a href=""><i class="socicon-github" target="_blank"></i></a>
-      <a href=""><i class="socicon-twitter" target="_blank"></i></a>
-      <a href=""><i class="socicon-linkedin" target="_blank"></i></a>
-      <a href="https://twitch.tv/n0tahacker_/" target="_blank"><i class="socicon-twitch"></i></a>
-      <a href=""><i class="socicon-facebook" target="_blank"></i></a>
+      <a target="_blank" href="https://github.com/jh-code/"><i class="socicon-github"></i></a>
+      <a target="_blank" href="https://www.linkedin.com/in/wphax/"><i class="socicon-linkedin"></i></a>
+      <a target="_blank" href="https://www.facebook.com/jhcode/"><i class="socicon-facebook"></i></a>
+      <a target="_blank" href="https://stackexchange.com/users/274396/jared?tab=accounts"><i class="socicon-stackexchange"></i></a>
     </span>
   </div>
 </header>
